# rf_controller

./: LICENSE  README.md
Current Complied/: CMakeLists.txt  cdhc_in.pio.h  rcV4.uf2  rcv4.c  recV4.uf2
Current Complied/Current In Progress Files/: CMakeLists.txt  cdhc_in.pio  cdhc_in.pio.h  lcd_driver.pio  lcd_driver.pio.h  rcv4.c  rotary_encoder_lib.h
Source Files/: CMakeLists.txt  cdhc_in.pio  cdhc_in.pio.h  lcd_driver.pio  rcv4.c
Source Files/resource/: Project PCB Pins.txt  controller_configurations.h  controller_structures.h  voltage_disp_defs.h
nrf24_driver/nrf24l01_receiver/: nrf24l01.c  nrf24l01.h  nrf24l01_low_level.c
nrf24_driver/nrf24l01_transmitter/: nrf24l01.c  nrf24l01.h  nrf24l01_low_level.c
